// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`keyrack status --env given: [case1] invalid --env value when: [t0] status is called with invalid env then: stderr matches snapshot 1`] = `
"
BadRequestError: invalid --env: must be one of sudo, prod, prep, test, all

[args] keyrack,status,--env,invalid

"
`;

exports[`keyrack status --env given: [case2] status --env filters keys to requested env when: [t0] status without --env shows all keys then: stdout matches snapshot 1`] = `
{
  "keys": [
    {
      "env": "sudo",
      "expiresAt": "__REDACTED__",
      "org": "@all",
      "slug": "@all.sudo.SUDO_SECRET",
      "ttlLeftMs": "__REDACTED__",
    },
  ],
  "owner": null,
  "recipients": [
    {
      "addedAt": "__REDACTED__",
      "label": "default",
      "mech": "age",
      "pubkey": "age1qzd7j8sdwzn8a75lsxyw2sx7e7rn7g6w3a7x08m95pxan3c3u9fq7c6xuf",
    },
  ],
  "socketPath": "__REDACTED__",
}
`;

exports[`keyrack status --env given: [case2] status --env filters keys to requested env when: [t1] status --env sudo shows only sudo keys then: stdout matches snapshot 1`] = `
{
  "keys": [
    {
      "env": "sudo",
      "expiresAt": "__REDACTED__",
      "org": "@all",
      "slug": "@all.sudo.SUDO_SECRET",
      "ttlLeftMs": "__REDACTED__",
    },
  ],
  "owner": null,
  "recipients": [
    {
      "addedAt": "__REDACTED__",
      "label": "default",
      "mech": "age",
      "pubkey": "age1qzd7j8sdwzn8a75lsxyw2sx7e7rn7g6w3a7x08m95pxan3c3u9fq7c6xuf",
    },
  ],
  "socketPath": "__REDACTED__",
}
`;

exports[`keyrack status --env given: [case2] status --env filters keys to requested env when: [t2] status --env test returns empty (no test keys) then: stdout matches snapshot 1`] = `
{
  "keys": [],
  "owner": null,
  "recipients": [
    {
      "addedAt": "__REDACTED__",
      "label": "default",
      "mech": "age",
      "pubkey": "age1qzd7j8sdwzn8a75lsxyw2sx7e7rn7g6w3a7x08m95pxan3c3u9fq7c6xuf",
    },
  ],
  "socketPath": "__REDACTED__",
}
`;

exports[`keyrack status --env given: [case3] status --env shows hint for non-sudo envs with keys when: [t0] status --env test (no keys in test, but keys in prep) then: stdout matches snapshot 1`] = `
"
🔐 keyrack status
   ├─ owner: (default)
   ├─ recipients:
   │  └─ default (age)
   └─ daemon: active ✨
      └─ (no keys in --env test, try --env prep)

"
`;

exports[`keyrack status --env given: [case4] status --env shows no hint when only sudo keys exist when: [t0] status --env test (no keys in test, only sudo keys exist) then: stdout matches snapshot 1`] = `
"
🔐 keyrack status
   ├─ owner: (default)
   ├─ recipients:
   │  └─ default (age)
   └─ daemon: active ✨
      └─ (no keys in --env test)

"
`;

exports[`keyrack status --env given: [case5] status with --env in isolated env (daemon inactive) when: [t0] status is called with --env test (daemon inactive) then: stdout matches snapshot 1`] = `
"
🔐 keyrack status
   └─ daemon: not found
      └─ run \`rhx keyrack unlock\` to start session

"
`;
